# ChangeLog for sys-kernel/git-sources
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.423 2008/12/29 13:51:28 mpagano Exp $

*git-sources-2.6.28-r2 (29 Dec 2008)

  29 Dec 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.28-r2.ebuild:
  Version bump

*git-sources-2.6.28-r1 (29 Dec 2008)

  29 Dec 2008; Michael Pagano <mpagano@gentoo.org>
  -git-sources-2.6.28_rc8-r1.ebuild, -git-sources-2.6.28_rc8-r2.ebuild,
  -git-sources-2.6.28_rc8-r3.ebuild, -git-sources-2.6.28_rc8-r4.ebuild,
  -git-sources-2.6.28_rc8-r5.ebuild, -git-sources-2.6.28_rc8-r6.ebuild,
  +git-sources-2.6.28-r1.ebuild:
  Version bump and old version cleanup

*git-sources-2.6.28_rc9-r4 (24 Dec 2008)

  24 Dec 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.28_rc9-r4.ebuild:
  Version bump

*git-sources-2.6.28_rc9-r3 (22 Dec 2008)

  22 Dec 2008; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.28_rc9-r3.ebuild:
  Version bump

  21 Dec 2008; Michael Pagano <mpagano@gentoo.org>
  -git-sources-2.6.28_rc7-r1.ebuild, -git-sources-2.6.28_rc7-r2.ebuild,
  -git-sources-2.6.28_rc7-r3.ebuild, -git-sources-2.6.28_rc7-r4.ebuild,
  -git-sources-2.6.28_rc7-r5.ebuild, -git-sources-2.6.28_rc7-r6.ebuild,
  -git-sources-2.6.28_rc7-r7.ebuild, -git-sources-2.6.28_rc7-r8.ebuild:
  Old version cleanup

*git-sources-2.6.28_rc9-r2 (21 Dec 2008)

  21 Dec 2008; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.28_rc9-r2.ebuild:
  Version bump

*git-sources-2.6.28_rc9-r1 (20 Dec 2008)

  20 Dec 2008; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.28_rc9-r1.ebuild:
  Version bump

*git-sources-2.6.28_rc8-r6 (18 Dec 2008)

  18 Dec 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.28_rc8-r6.ebuild:
  Version bump

*git-sources-2.6.28_rc8-r5 (17 Dec 2008)

  17 Dec 2008; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.28_rc8-r5.ebuild: