@@ -2,6 +2,7 @@ DIST linux-2.6.27.tar.bz2 50355835 RMD160 5be4595ad824a4af67c1ec0c692838ad0c31f0
 DIST linux-2.6.28.tar.bz2 52665364 RMD160 47e8925220e29e239f9478228fc53543c1f7b300 SHA1 4f40f8bf3fd110b0cc6e1fea5f539c98f9959e94 SHA256 ae0d97c55efe7fce01273c97f8152af0deff5541e3bbf5b9ad98689112b54380
 DIST patch-2.6.28-git1.bz2 2571579 RMD160 9e954e422dbee6e89e4878d89d3ec2483790d08e SHA1 8f7d1e1530642a7feeb66d3f585a55c03fe6988e SHA256 68ffcc54a74be0d4c6a0950c07cacaaa6decf25dbc568d835cb4afb79366fcc1
 DIST patch-2.6.28-git2.bz2 2693232 RMD160 03a458a7ca9dbf46e7fe023e54ffa1b8750b70e1 SHA1 374f16fd8574c7f4c0d9e357ff4fda47718c3461 SHA256 a4e755cbbec406e15a2fd54888d7a1529c1b386a4d3235692c6d70ba96a87548
+DIST patch-2.6.28-git3.bz2 4846484 RMD160 a6fa9cd6cd669596f1026a9eebc0c5e37118906d SHA1 d023f0c5c9ec6f6013765e7a7242c4671981917a SHA256 15e4b51ea3709990c4f6c2e29e39ae4ea6c4d4fa7275e8fda5a798487a09b43e
 DIST patch-2.6.28-rc9-git1.bz2 6146 RMD160 2cea3de4190c69be3d4e94056e1a566288fd2d5e SHA1 e47e5250b3e158a26acb4753f7578368e2e2b2fb SHA256 3e94f2020ac0c5016073190946266194404989c769257ac6d700aecc18dd08e2
 DIST patch-2.6.28-rc9-git2.bz2 8459 RMD160 963f8b1584b1de75d1c7794ac4420eb5d74a1be6 SHA1 534fa3675d4a0f99dd9cbf327c7c079d8c5a3b48 SHA256 e8eb43b103a6f2c031fb6913960894aaf8a390916a92f5d16cd84e61fc4ec966
 DIST patch-2.6.28-rc9-git3.bz2 8688 RMD160 33805b49c414e09630d424702d75d1729f670b62 SHA1 7fe7e1b978ca9d16e908485a70ced940b756c782 SHA256 ea39b1c09fa80e1c19bae57538b2a9633afb35c8789f6fcd3fbde7e703344015
@@ -9,9 +10,10 @@ DIST patch-2.6.28-rc9-git4.bz2 12559 RMD160 deb044f6df24e9a31f22e5ce93ed4124244c
 DIST patch-2.6.28-rc9.bz2 9918815 RMD160 986040e5b6ebd86f970980f5b72b86d234d1e665 SHA1 54596350e83d1157dce4eaeb9e0aeef57c29bcdf SHA256 e3de92263fa1b4a3def9073004aebc000559b422fccaceea2108a25e5d01c1ab
 EBUILD git-sources-2.6.28-r1.ebuild 1238 RMD160 7ccbc5df98179b663138820f68cdfd7567c31f11 SHA1 aa0ca5fa7e605cdedd022100ee5c544d0def3f86 SHA256 508d31361ec8829936409b20fe97bc6937ac94d09cc116c3652f6cf2cdb459ef
 EBUILD git-sources-2.6.28-r2.ebuild 1238 RMD160 4bf5b0bcf04892bc680156c0ecab6a215133ff20 SHA1 a407918fc8d850dd8d47234b7c9b9b06b7739c30 SHA256 6703d6db79d17ca61cc399588854797d818c89d51d49065f199eb2b2dd528507
+EBUILD git-sources-2.6.28-r3.ebuild 1238 RMD160 25c82b174a205f3b771f7d2bbdc2171528694ad9 SHA1 f4c7c6b060bfbab5a2fb726f619ac8b819a22f61 SHA256 0201a0c1419931c24a1e03488ff5af2db5d8eb9594b161203f40874bd26ea5ea
 EBUILD git-sources-2.6.28_rc9-r1.ebuild 1242 RMD160 f081c682f0c5bb9f88e5a5a5ad8bc7d4e8aca243 SHA1 70d991a26f58e640ce6cb873a77467ca92395236 SHA256 f7fa9987f7ee08c64ddab95d36c33445d02f76ae993ae26f0ff5661673519804
 EBUILD git-sources-2.6.28_rc9-r2.ebuild 1242 RMD160 f7b5503e2b864300e78797312f43c1097b7d3e56 SHA1 3c55ed90bf64f8e92eda73d861106afd8ded5c37 SHA256 fedc2c159d0589ad60e6fd886a533031aa73c6c3d9abacd8265db23883502d90
 EBUILD git-sources-2.6.28_rc9-r3.ebuild 1242 RMD160 ce289809cf043fb334ca412ffea8bc2761fa1df1 SHA1 561b22714d5ed7ad98c98861a67242267e1212bc SHA256 0bbb2b5bb9b73370fd8ebffac4be207dad67d6fc585a27aaac89667fa7baeb49
 EBUILD git-sources-2.6.28_rc9-r4.ebuild 1242 RMD160 d44d1efe71f8e9c4e57595451def1890909e075a SHA1 f319ed2be2aff120e0739581ef52fbe26d361b04 SHA256 c36411ab480f5e704a43c36e2beca92178a228710f528c50f8b42a8b3569bd05
-MISC ChangeLog 80559 RMD160 7728dd5a8c516b36371f65c513f4816cad2ea1c3 SHA1 6ffecb8419176e452a1a42c688a171a6dafeda40 SHA256 369e200b0884a82e3518f5f3f898b8c65f6546f2db4df0430ad21d96bed9e53f
+MISC ChangeLog 80694 RMD160 688496318adfea7fe88dbd4025abc5c0bc5b3bc9 SHA1 6ce153016c8519625b750038d29142ff2ef1c943 SHA256 723b92826623df621fdbfc5fd87b4c9624161c0c5c712d18b07595ea24ab0991
 MISC metadata.xml 443 RMD160 2b491a6310ff59f0658f64be1328b983ac82a462 SHA1 a65b3e97b9088758114ce0dbb46abb15879211e0 SHA256 9232689e2d3a60e31b4b0194770e6395613a110b77bef2f4e2f98d919acbaf13
