@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.423 2008/12/29 13:51:28 mpagano Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.424 2008/12/31 13:33:57 mpagano Exp $
+
+*git-sources-2.6.28-r3 (31 Dec 2008)
+
+  31 Dec 2008; Mike Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.28-r3.ebuild:
+  Version bump
 
 *git-sources-2.6.28-r2 (29 Dec 2008)
 
